--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="btn_active">激活</string>
     <string name="btn_ignore">忽略</string>
     <string name="toast_xposed_not_installed">未安装 Xposed Installer！</string>
-    <string name="toast_exposed_not_installed">未安装太极！</string>
+    <string name="toast_exposed_not_installed">非太极环境!, EdXposed请至EdXposed Manager中勾选激活！</string>
     <string name="work_right_now">更改立即生效</string>
     <string name="work_after_reload">更改在结束软件进程或者重启后生效</string>
     <string name="msg_module_not_active">模块未激活，请先激活模块并重启手机！</string>
@@ -15,7 +15,7 @@
     <string name="auto_sign">自动签到</string>
     <string name="hide_hongbao">隐藏首页红包浮窗</string>
     <string name="auto_get_hongbao">自动领取浮窗红包</string>
-    <string name="cancel_hide_content_hot">取消隐藏时间线热门</string>
+    <string name="cancel_hide_content_hot">取消屏蔽时间线热门</string>
     <string name="filter_content_key_word">屏蔽的内容关键词(,隔开)</string>
     <string name="filter_user_key_word">屏蔽的用户关键词(,隔开)</string>
     <string name="hide_detail_share">隐藏微博详情底部分享面板</string>
